--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	      	cursor: pointer;
 	    }
 
-	    .meme::webkit-media-controls {
+	    .meme::-webkit-media-controls {
 	    	display: none;
 	    	opacity: 0;
 	    }
