--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
 <body>
 	<div class="video-container">
+		<video class="meme" loop muted playsinline controls src="1.mp4"></video>
+		<video class="meme" loop muted playsinline controls src="2.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="3.mp4"></video>
-		<video class="meme" loop muted playsinline src=".mp4"></video>
-		<video class="meme" loop muted playsinline src=".mp4"></video>
-		<video class="meme" loop muted playsinline src=".mp4"></video>
-		<video class="meme" loop muted playsinline src=".mp4"></video>
-		<video class="meme" loop muted playsinline src=".mp4"></video>
+		<video class="meme" loop muted playsinline controls src="4.mp4"></video>
+		<video class="meme" loop muted playsinline controls src="7.5.mp4"></video>
+		<video class="meme" loop muted playsinline controls src="8.mp4"></video>
 		<video class="meme" loop muted playsinline src=".mp4"></video>
 		<video class="meme" loop muted playsinline src=".mp4"></video>
     </div>
