--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<video class="meme" loop muted playsinline controls src="4.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="7.5.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="8.mp4"></video>
-		<video class="meme" loop muted playsinline src=".mp4"></video>
+		<video class="meme" loop muted playsinline controls src="6.mp4"></video>
 		<video class="meme" loop muted playsinline src=".mp4"></video>
     </div>
 
