--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
 	<div class="video-container">
 		<video class="meme" loop muted playsinline controls src="huh_cat.mp4"></video>
-		<video class="meme" loop muted playsinline controls src="2.mp4"></video>
+		<video class="meme" loop muted playsinline controls src="stress_cat.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="3.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="4.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="7.5.mp4"></video>
