--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 	<div class="video-container">
 		<video class="meme" loop muted playsinline controls src="huh_cat.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="stress_cat.mp4"></video>
-		<video class="meme" loop muted playsinline controls src="3.mp4"></video>
+		<video class="meme" loop muted playsinline controls src=".mp4"></video>
 		<video class="meme" loop muted playsinline controls src="4.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="7.5.mp4"></video>
-		<video class="meme" loop muted playsinline controls src="8.mp4"></video>
+		<video class="meme" loop muted playsinline controls src="happy_cat.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="6.mp4"></video>
 		<video class="meme" loop muted playsinline src=".mp4"></video>
     </div>
