--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		<video class="meme" loop muted playsinline controls src=".mp4"></video>
 		<video class="meme" loop muted playsinline controls src="wiwiwi_cat.mp4"></video>
 		<video class="meme" loop muted playsinline controls src="happy_cat.mp4"></video>
-		<video class="meme" loop muted playsinline controls src="6.mp4"></video>
-		<video class="meme" loop muted playsinline src=".mp4"></video>
+		<video class="meme" loop muted playsinline controls src="oia_cat.mp4"></video>
+		<video class="meme" loop muted playsinline controls src=".mp4"></video>
     </div>
 
 	<script>
